[dependencies]
bevy = "0.13"
hexasphere = "13.1.0"
hexasphere_organized = { path = "../hex-util" }

[lints]
workspace = true

[package]
name = "game"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
