[dependencies]
bevy = "0.14"
hexasphere = "14.0.0"
hexasphere_organized = { path = "../hex-util" }

[lints]
workspace = true

[package]
name = "game"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
version = { workspace = true }
